--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <link rel="stylesheet" type="text/css" href="{{ '/static/css/article-list.css' | prepend: site.baseurl | prepend: site.url}}" />
-
+<div><img style="height: 200px; width: 200px;" title="连边的订阅号" src="http://mkstatic.lianbian.net/wx_qr.jpg"></div>
 <div class="row index">
   <div class="col-sm-10 col-sm-offset-1 col-lg-9 col-lg-offset-1_5">
       <div>
